Fixed spacing issues
* issue was that I was handing content margins independantly from the overall wrapper, eventually I should go back and intergrate the media queries into the .wrapper class, but for now there are few enough instances of it that it's more convienient to add the media queries individually

--- a/src/index/testimonials.sass
+++ b/src/index/testimonials.sass
@@ -23,6 +23,9 @@
     min-width: unset
     width: calc(100% - 20px)
     margin: 20px auto
+@media (max-width: $small)
+  .t-container
+    width: 100%
 
 
 .quote
